Fix layout issues in body and card styles for better alignment and responsiveness

--- a/style.css
+++ b/style.css
@@ -24,12 +24,16 @@ body {
   font-family: "Sora", sans-serif;
 
   background-color: var(--color4-offwhite);
+
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .card {
   max-width: 352px;
   background-color: var(--color5-white);
-  margin: 164px auto 1px auto;
+  margin: 0 auto 1px auto;
   padding: 16px 16px 20px 16px;
   border-radius: 14px 14px 0 0;
   box-shadow: 8px 8px 20px 0px rgb(32, 41, 58, 0.2);
@@ -64,6 +68,7 @@ img {
 
 .card_tag {
   max-width: 352px;
+  width: 100%;
   background-color: var(--color5-white);
   margin: 0 auto;
   padding: 20px 16px;
